gallery overflow fixed

--- a/src/Pages/Gallery/Gallery.module.css
+++ b/src/Pages/Gallery/Gallery.module.css
@@ -7,6 +7,7 @@
   max-height: -webkit-fit-content;
   padding: 1rem;
   text-align: center;
+  overflow: hidden;
 }
 .galleryContainer {
   display: flex;
